tests/fixtures/syntax/invalid/document_case_empty_block.repor
# A document case block with zero fields is rejected during parser
# construction (parse.document_block.empty), not as a bare syntax error.
document case {
}

case "never parsed" {
  $ true
  assert {
    exit 0
  }
}
